# plates-mobile

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
app/modules/: audio-transcription.ts  engine.ts
src/: app.html
src-tauri/: .env.example  Cargo.toml  build.rs  download_model.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: engine.rs  lib.rs  main.rs  network.rs  search.rs  speech.rs  talk.rs
src/components/: PredictiveTextInput.svelte  ResultPage.svelte  SpeechToText.svelte  TextInput.svelte  tutorial.svelte
src/modules/: battery.ts  time.ts  weather.ts
src/routes/: +page.svelte
